# BullshitGenerator

./: BullshitGenerator.cpp  BullshitGenerator.h  CMakeLists.txt  loremipsum.txt  main.cpp
